--- a/src/public/css/mystyle.scss
+++ b/src/public/css/mystyle.scss
@@ -64,7 +64,7 @@
   font-weight: normal;
   //src:  url('../fonts/melany_lane_bold.woff2') ;
   //src:  url('https://s3.ap-south-1.amazonaws.com/www.seashellresorts/src/public/fonts/melany_lane_bold.woff2') format("woff2");
-  src:  url('https://seashellresorts.com/font.woff2') format("woff2"), url('https://www.seashellresorts.com/font.woff2') format("woff2");
+  src:  url('https://seashellresorts.com/font.woff2') format("woff2"), url('https://www.seashellresorts.com/font.woff2') format("woff2"), url('../fonts/melany_lane_bold.woff2') format("woff2");
 
 }
 
